sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:4: error: not found: value len
  var len.Int = getNombreValeurs()
      ^AlgShellSort:6: error: not found: value len
  ecart = ((len.toDouble)/2).toInt
            ^